--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
     <link rel="stylesheet" href="style.css">
-    <title>Parallax eu</title>
+    <title>Parallax website</title>
 </head>
 <body>
     <div class="parte1">
